--- a/packages/www/src/components/Header.astro
+++ b/packages/www/src/components/Header.astro
@@ -77,7 +77,7 @@ const useCases = [
     </nav>
 
     <div class="nav-right">
-      <a href="https://docs.discolink.dev" class="docs-link" target="_blank" rel="noopener">
+      <a href="https://docs.discolink.site" class="docs-link" target="_blank" rel="noopener">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
           <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
