--- a/packages/www/src/pages/use-cases/index.astro
+++ b/packages/www/src/pages/use-cases/index.astro
@@ -73,7 +73,7 @@ const useCases = [
         <p>DiscoLink is flexible. You can combine multiple use cases or build something entirely custom with the API.</p>
         <div class="cta-buttons">
           <a href="/quickstart" class="btn btn-primary">Get Started</a>
-          <a href="/docs/api" class="btn btn-secondary">Explore the API</a>
+          <a href="https://docs.discolink.site/api/overview" target="_blank" rel="noopener" class="btn btn-secondary">Explore the API</a>
         </div>
       </section>
     </div>
